--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.MY_PAT_TOKEN }}  # Gunakan Personal Access Token (PAT) yang sudah dibuat
+          github_token: ${{ secrets.MY_PAT_TOKEN }}  # Menggunakan Personal Access Token (PAT) yang sudah ditambahkan
           publish_dir: ./docs  # Menggunakan folder docs untuk deploy ke GitHub Pages
